--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,47 +11,42 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         
     - name: Setup Java
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '17'
         
     - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
+      uses: android-actions/setup-android@v3
       
     - name: Install dependencies
       run: npm install
       
-    - name: Install Capacitor
-      run: |
-        npm install -g @capacitor/cli
-        npx cap add android
-        
+    - name: Install Capacitor CLI
+      run: npm install -g @capacitor/cli
+      
+    - name: Add Android platform
+      run: npx cap add android
+      
+    - name: Sync Capacitor
+      run: npx cap sync android
+      
     - name: Build APK
       run: |
         cd android
-        ./gradlew assembleRelease
+        chmod +x ./gradlew
+        ./gradlew assembleDebug
         
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: shopping-list-app
-        path: android/app/build/outputs/apk/release/app-release.apk
-        
-    - name: Create Release
-      if: github.ref == 'refs/heads/main'
-      uses: softprops/action-gh-release@v2
-      with:
-        tag_name: v${{ github.run_number }}
-        name: Release v${{ github.run_number }}
-        files: android/app/build/outputs/apk/release/app-release.apk
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        name: shopping-list-debug-apk
+        path: android/app/build/outputs/apk/debug/app-debug.apk
