--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,14 +39,25 @@ jobs:
     - name: Sync Capacitor
       run: npx cap sync android
       
-    - name: Build APK
+    - name: Create keystore from secrets
+      run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > app-signing-key.jks
+      
+    - name: Build signed release APK
+      env:
+        KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+        KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+        KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
       run: |
         cd android
         chmod +x ./gradlew
-        ./gradlew assembleDebug
+        ./gradlew assembleRelease \
+          -Pandroid.injected.signing.store.file=../app-signing-key.jks \
+          -Pandroid.injected.signing.store.password=$KEYSTORE_PASSWORD \
+          -Pandroid.injected.signing.key.alias=$KEY_ALIAS \
+          -Pandroid.injected.signing.key.password=$KEY_PASSWORD
         
-    - name: Upload APK
+    - name: Upload signed APK
       uses: actions/upload-artifact@v4
       with:
-        name: shopping-list-debug-apk
-        path: android/app/build/outputs/apk/debug/app-debug.apk
+        name: shopping-list-signed-apk
+        path: android/app/build/outputs/apk/release/app-release.apk
