--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,25 +39,14 @@ jobs:
     - name: Sync Capacitor
       run: npx cap sync android
       
-    - name: Create keystore from secrets
-      run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > app-signing-key.jks
-      
-    - name: Build signed release APK
-      env:
-        KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-        KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-        KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+    - name: Build debug APK
       run: |
         cd android
         chmod +x ./gradlew
-        ./gradlew assembleRelease \
-          -Pandroid.injected.signing.store.file=../app-signing-key.jks \
-          -Pandroid.injected.signing.store.password=$KEYSTORE_PASSWORD \
-          -Pandroid.injected.signing.key.alias=$KEY_ALIAS \
-          -Pandroid.injected.signing.key.password=$KEY_PASSWORD
+        ./gradlew assembleDebug
         
-    - name: Upload signed APK
+    - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: shopping-list-signed-apk
-        path: android/app/build/outputs/apk/release/app-release.apk
+        name: shopping-list-app
+        path: android/app/build/outputs/apk/debug/app-debug.apk
